[package]
name = "async-graphql-demo"
version = "0.1.0"
authors = ["Chris Ha <chunghha@users.noreply.github.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
async-graphql = "2.5.4"
async-graphql-tide = "2.5.4"
async-std = "1.9.0"
serde_json = "1.0.62"
surf = "2.1.0"
tide = "0.16.0"
